added new features . now its can show its own saved images from inside the app

--- a/app/src/main/assets/webassets/faq.html
+++ b/app/src/main/assets/webassets/faq.html
@@ -1,52 +1,68 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><span style="color:black;font-weight:bold">Code to Image</span> FAQ</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h2 {
+            color: #2c3e50;
+        }
+        .faq-section {
+            margin-bottom: 20px;
+        }
+        .faq-section h3 {
+            margin: 10px 0;
+            color: #34495e;
+        }
+        .faq-section p {
+            margin: 5px 0 15px;
+            color: #7f8c8d;
+        }
+    </style>
 </head>
 <body>
 
-<h1 style="margin-top: 10px;">FAQ</h1>
-<hr>
+<h2><span style="color:black;font-weight:bold">Code to Image</span> Converter FAQ</h2>
 
-<h3>মোবাইল থেকে এ্যাপটা আনইন্সটল হয়ে গেলে পুনরায় ইনস্টল করার পর আগের ডাটা কিভাবে ফিরে পাবো? </h3>
-<p><h4>উত্তর - </h4>
-অ্যাপ এর ভেতরে (excel) ফাইল ব্যাকআপ করার অপশন দেওয়া আছে । এবং সেই ফাইল রিস্টোর করার ব্যবস্থা ও রয়েছে
-।
-তাই আপনার কাছে এক্সেল ফাইল থাকলেই আপনি সহজেই আপনার আগের ডাটা ফিরে পাবেন।
-<br><br>
-<strong>পরামর্শ -</strong>
-প্রতি মাসে একবার এক্সেল ব্যাকআপ ফাইল তৈরী করে সেটা গুগল ড্রাইভে আপলোড দিয়ে রাখুন । তাহলে আপনার ফোন
-হারিয়ে গেলে অথবা অ্যাপ আনইন্সটল হয়ে গেলেও আপনি আপনার ডাটা সহজেই ফিরে পাবেন।
+<div class="faq-section">
+    <h3>What is <span style="color:black;font-weight:bold">Code to Image</span> Converter?</h3>
+    <p><span style="color:black;font-weight:bold">Code to Image</span> Converter is a free online tool for generating code images and works as a code screenshot generator. It allows you to create images of your code snippets and share them easily on social media or with colleagues.</p>
+</div>
 
-<p/>
+<div class="faq-section">
+    <h3>What is a programming language?</h3>
+    <p>A programming language is a set of rules used to communicate with computers and machines. These languages are used to create software, applications, games, operating systems, and more.</p>
+</div>
 
+<div class="faq-section">
+    <h3>Who can use the <span style="color:black;font-weight:bold">Code to Image</span> Converter?</h3>
+    <p>Any developer, whether frontend, backend, mobile, or full stack, can use this tool to generate code images. DevOps engineers can also use it to share config files like Dockerfile.</p>
+</div>
 
-<h3>ব্যাকআপ ফাইল রিস্টোর হচ্ছে না?</h3>
-<p><h4>উত্তর - </h4>
-ব্যাকআপ ফাইল তৈরী করার পর যদি ফাইলটি অন্য কোন অ্যাপ/সফটওয়্যার দিয়ে অপেন/এডিট করা হয় সে
-ক্ষেত্রে ফাইলটি কাজ করবেন না।
-<p/>
+<div class="faq-section">
+    <h3>How do I use the <span style="color:black;font-weight:bold">Code to Image</span> Converter?</h3>
+    <p>Simply paste your code into the editor, select the programming language, and it will be automatically highlighted. Then, click on the download button to generate a screenshot of the code.</p>
+</div>
 
-<h3>ব্যাকআপ ফাইল ফোনের কোন ফোল্ডারে Save হয় ?</h3>
-<p><h4>উত্তর - </h4>
-ব্যাকআপ ফাইল Documents > HisebiBackup নামে ফোল্ডারে জমা হয় ।
-<p/>
+<div class="faq-section">
+    <h3>What programming languages are supported?</h3>
+    <p>Many languages are supported, including JavaScript, TypeScript, HTML, CSS, Java, Python, PHP, Kotlin, Swift, Dart, Ruby, Rust, C#, Go, and more. All these languages will be auto-highlighted.</p>
+</div>
 
-<h3>অ্যাপ পাসওয়ার্ড লক সিস্টেম নাই কেন ?</h3>
-<p><h4>উত্তর- </h4>
-এই অ্যাপটি বিভিন্ন বয়সের বিভিন্ন পেশার মানুষ ব্যবহার করেন । কারো টেকনলজি গত জ্ঞান অনেক কারো আবার
-সীমিত । তাই সব স্থরের ব্যবহার কারীর কথা মাথায় রেখে এই ফিচারটি দেওয়া হয়নি । <br><br>
-<strong>বিঃদ্রঃ-</strong> আপনি চাইলে যে কোন অ্যাপ লকার দিয়ে এই অ্যাপটি লক করে রাখতে পারবেন ।
-<p/>
+<div class="faq-section">
+    <h3>What themes are available for highlighting?</h3>
+    <p>There are many light and dark themes available for highlighting, such as Dracula, A11y, Android Studio, XCode, Atom One, GitHub, Google Code, Intellij, Monokai, Night Owl, Nord, StackOverflow, Visual Studio Code, and more.</p>
+</div>
 
-<h3>এই অ্যাপে Login/Sign Up নেই কেন ?</h3>
-<p><h4>উত্তর- </h4>
-যেহেতুন এই অ্যাপটি অফলাইনে ব্যবহার উপযোগি করে তৈরী করা হয়েছে আর এই অ্যাপটি বিভিন্ন বয়সের বিভিন্ন
-পেশার মানুষ ব্যবহার করেন । কারো টেকনলজি গত জ্ঞান অনেক কারো আবার সীমিত । তাই সব স্থরের ব্যবহার কারীর
-কথা মাথায় রেখে এই ফিচারটি দেওয়া হয়নি । <br><br>
-<strong>বিঃদ্রঃ-</strong> এই অ্যাপটির অনলাইন ভার্সন এর কাজ চলমান রয়েছে । আশা করছি খুব দ্রুতই সেই
-অ্যাপটি Google Playstore এ রিলিজ হবে । আর সেখানে Login/Sign Up এর ব্যপারটি থাকবে।
-<p/>
+<div class="faq-section">
+    <h3>Can I customize the code image?</h3>
+    <p>Yes, you can choose the background color or image, monospace font family, font size, image quality, shadow attributes, and many other options. Popular monospace fonts like Roboto Mono, Space Mono, PT Mono, or Source Code Pro can be used.</p>
+</div>
 
 </body>
 </html>
