--- a/app/src/main/assets/webassets/privacy.html
+++ b/app/src/main/assets/webassets/privacy.html
@@ -12,7 +12,7 @@
 <body>
 <strong>Privacy Policy</strong>
 <p>
-    Md Tayobur Rahman built the হিসেবী - দৈনিক আয় ব্যয় হিসাব app as
+    Md Tayobur Rahman built the <span style="color:black;font-weight:bold">Code to Image</span> app as
     an Ad Supported app. This SERVICE is provided by
     Md Tayobur Rahman at no cost and is intended for use as
     is.
@@ -32,7 +32,7 @@
 <p>
     The terms used in this Privacy Policy have the same meanings
     as in our Terms and Conditions, which are accessible at
-    হিসেবী - দৈনিক আয় ব্যয় হিসাব unless otherwise defined in this Privacy Policy.
+    <span style="color:black;font-weight:bold">Code to Image</span> unless otherwise defined in this Privacy Policy.
 </p>
 <p><strong>Information Collection and Use</strong></p>
 <p>
@@ -164,7 +164,7 @@
     notify you of any changes by posting the new Privacy Policy on
     this page.
 </p>
-<p>This policy is effective as of 2022-11-27</p>
+<p>This policy is effective as of 2024-08-07</p>
 <p><strong>Contact Us</strong></p>
 <p>
     If you have any questions or suggestions about our
