--- a/app/src/main/assets/webassets/terms.html
+++ b/app/src/main/assets/webassets/terms.html
@@ -32,7 +32,7 @@
     clear to you exactly what you’re paying for.
 </p>
 <p>
-    The হিসেবী - দৈনিক আয় ব্যয় হিসাব app stores and processes personal data that
+    The <span style="color:black;font-weight:bold">Code to Image</span> app stores and processes personal data that
     you have provided to us, to provide our
     Service. It’s your responsibility to keep your phone and
     access to the app secure. We therefore recommend that you do
@@ -41,7 +41,7 @@
     official operating system of your device. It could make your
     phone vulnerable to malware/viruses/malicious programs,
     compromise your phone’s security features and it could mean
-    that the হিসেবী - দৈনিক আয় ব্যয় হিসাব app won’t work properly or at all.
+    that the <span style="color:black;font-weight:bold">Code to Image</span> app won’t work properly or at all.
 </p>
 <div><p>
     The app does use third-party services that declare their
@@ -140,7 +140,7 @@
 </p>
 
 <h1>Data Loss Disclaimer</h1>
-<p>The use of <strong>হিসেবী - দৈনিক আয় ব্যয় হিসাব</strong> (the "App") is at the sole risk of the
+<p>The use of <strong><span style="color:black;font-weight:bold">Code to Image</span></strong> (the "App") is at the sole risk of the
     user. <strong>Md Tayobur Rahman</strong> ("We," "Us," or "Our") shall not be held liable for any data
     loss experienced by the user as a result of using the App. This includes, but is not limited to,
     any loss of user-generated data, settings, configurations, or any other information stored
